--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Nicolas Ang'
+  github_nickname: 'nicolasang'
+- name: 'David Bui'
+  github_nickname: 'ngochoabui'
